Refactor base site

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 SECRET_KEY=change-me-to-a-random-secret-key
 DEBUG=0
 ALLOWED_HOSTS=drone.argawaen.net,127.0.0.1,localhost
+CSRF_TRUSTED_ORIGINS=https://drone.argawaen.net
 PORT=8000
 PATH_DATABASE=./docker_data/db/
 PATH_MEDIA=./docker_data/media/
