--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 # Django settings
 SECRET_KEY=change-me-to-a-random-secret-key
 DEBUG=0
-ALLOWED_HOSTS=drone.argawaen.net,127.0.0.1,localhost
-CSRF_TRUSTED_ORIGINS=https://drone.argawaen.net
+ALLOWED_HOSTS=bob,127.0.0.1,localhost
+CSRF_TRUSTED_ORIGINS=bob
 PORT=8000
 PATH_DATABASE=./docker_data/db/
 PATH_MEDIA=./docker_data/media/
@@ -10,13 +10,6 @@ PATH_MEDIA=./docker_data/media/
 # Email settings
 EMAIL_HOST=127.0.0.1
 EMAIL_PORT=587
-EMAIL_HOST_USER=site@argawaen.net
+EMAIL_HOST_USER=site@bob
 EMAIL_HOST_PASSWORD=change-me
 EMAIL_USE_TLS=1
-
-# MySQL source (for import_from_mysql command only)
-MYSQL_HOST=hestia.argawaen.net
-MYSQL_PORT=3306
-MYSQL_NAME=Site_Common
-MYSQL_USER=www_common
-MYSQL_PASSWORD=change-me
